@@ -20,6 +20,8 @@ v0.7.0, 2019-10-?? -- fall cleaning
      * mrjob.util.parse_and_save_options()
    * file_upload_args kwarg to runner constructor
    * max_hours_idle and mins_to_end_of_hour options
+   * visible_to_all_users opt
+
 
 v0.6.12, 2019-10-23 -- unbreak Google
  * default image_version on Dataproc is now 1.3 (#2110)
